[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TitleScene.gd" type="Script" id=1]
[ext_resource path="res://Fonts/dlxfont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/SpaceBackground.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 300, 350, 1 )
flag_disable_z = true
gravity = Vector3( 0, 10, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="TitleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 137.5
margin_top = 50.0
margin_right = 462.5
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.313726, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.2, 0.2, 0.2, 1 )
text = "--Spaceship--
_Game_"
align = 1

[node name="Play" type="Button" parent="."]
margin_left = 231.0
margin_top = 250.0
margin_right = 369.0
margin_bottom = 270.0
text = "Play"

[node name="About" type="Button" parent="."]
margin_left = 231.0
margin_top = 350.0
margin_right = 369.0
margin_bottom = 370.0
text = "About"

[node name="HowToPlay" type="Button" parent="."]
margin_left = 231.0
margin_top = 450.0
margin_right = 369.0
margin_bottom = 470.0
text = "How To Play"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 300, 350 )
z_index = -1
amount = 400
lifetime = 0.4
process_material = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 300, 350 )
scale = Vector2( 1.9, 1.5 )
z_index = -2
texture = ExtResource( 3 )

[node name="Back" type="Button" parent="."]
visible = false
margin_right = 138.0
margin_bottom = 20.0
disabled = true
text = "Back"

[node name="AboutText" type="Label" parent="."]
visible = false
margin_left = 60.0
margin_top = 234.0
margin_right = 540.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 3 )
text = "Made in 2019 by TheAssemberl1."
align = 1

[node name="HowToText" type="Label" parent="."]
visible = false
margin_left = 139.5
margin_top = 234.0
margin_right = 460.5
margin_bottom = 371.0
custom_fonts/font = SubResource( 4 )
text = "Arrow keys for left and right. Shoot with the spacebar. See how far you get."
align = 1
autowrap = true
[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="About" to="." method="_on_About_button_down"]
[connection signal="button_down" from="HowToPlay" to="." method="_on_HowToPlay_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_Back_button_down"]
